# Design-and-Analysis-of-Algorithms

./: ABOUT.md  BONAFIDE_CERTIFICATE.html  README.md
DAA-Laboratory-Exercises/: CMakeLists.txt  README.md  TODO_CODESTRUCTURE.md  build.bat  run_all.bat
DAA-Laboratory-Exercises/EX1_Brute_Force_Sorting/: CMakeLists.txt  bubble.cpp  selection.cpp
DAA-Laboratory-Exercises/EX2_Brute_Force_Search_and_Geometry/: CMakeLists.txt  closest.cpp  pattern.cpp
DAA-Laboratory-Exercises/EX3_Divide_and_Conquer/: CMakeLists.txt  merge.cpp  quick.cpp
DAA-Laboratory-Exercises/EX4_Decrease_and_Conquer/: CMakeLists.txt  heap.cpp  insert.cpp
DAA-Laboratory-Exercises/EX5_String_Matching/: CMakeLists.txt  horspool.cpp
DAA-Laboratory-Exercises/EX6_Dynamic_Programming/: CMakeLists.txt  floyd.cpp
DAA-Laboratory-Exercises/EX7_Greedy_Technique/: CMakeLists.txt  huffman.cpp
DAA-Laboratory-Exercises/EX8_Backtracking/: CMakeLists.txt  n_queen.cpp
DAA-Laboratory-Exercises/EX9_Branch_and_Bound/: CMakeLists.txt  branch.cpp
